# sgraph

./: .style.yapf  CLAUDE.md  LICENSE  README.md  catalog-info.yaml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: Gemfile  _config.yml  api-reference.md  cypher.md  data-formats.md  examples.md  getting-started.md  graph-conventions.md  index.md  visualization.md
docs/superpowers/plans/: 2026-03-10-multi-sbom-generator.md
docs/superpowers/specs/: 2026-03-10-multi-sbom-generator-design.md
scripts/: release.py
src/sgraph/: __init__.py  cypher.py  definitions.py  exceptions.py  graphdataservice.py  metricsapi.py  modelapi.py  selement.py  selementassociation.py  selementmergedexception.py  sgraph.py  sgraph_utils.py
src/sgraph/algorithms/: generalizer.py  pagerank.py  selementutils.py  sgraphanalysis.py  sgraphfiltering.py  sgraphmetrics.py
src/sgraph/attributes/: attributequeries.py
src/sgraph/cli/: filter.py  filter_deps.py  modelinfo_prettyprinter.py  sgraphcli.py  show_model.py
src/sgraph/cli/sgraph_shell/: shell.py  shell.tx  testing_parser.py  testing_shell.py
src/sgraph/cli/sgraph_shell/commands/: cat.py  cd.py  commandregistry.py  commandresult.py  cp.py  echo.py  exit.py  find.py  grep.py  mkdir.py  mv.py  pwd.py  rm.py  xargs.py
src/sgraph/cli/sgraph_shell/filesystem/: associationsfile.py  attributesfile.py  elementfile.py  fileabstraction.py  path_handler.py
src/sgraph/compare/: attributecomparison.py  comparegraphattrs.py  compareutils.py  modelcompare.py  renamedetector.py  selementmerged.py  similarityanalysis.py
src/sgraph/converters/: deps_to_xml.py  graphml.py  graphml_to_xml.py  sbom_cyclonedx_generator.py  sgraph_json.py  sgraph_to_cytoscape.py  xml_to_3dforcegraph.py  xml_to_deps.py  xml_to_dot.py  xml_to_graphml.py  xml_to_hierarchical_json.py  xml_to_json.py  xml_to_plantuml.py
src/sgraph/loader/: __init__.py  attribute_loader.py  attributeloader.py  model_loader.py  modelloader.py
src/sgraph/query/: __init__.py  engine.py  evaluator.py  expressions.py  parser.py  result.py
src/tests/: README.md
src/tests/sgraph/: modelapi_test.py  modelfile.xml
tests/: README.md  mini_model.xml  modelapi_test.py  modelfile_direct_indirect.xml  selementassociation_test.py  sgraph_test.py  test_query.py
tests/algorithms/: generalizer_test.py  pagerank_test.py  sgraphmetrics_test.py
tests/compare/: modelcompare_tests.py  renamedetector_tests.py
tests/converters/: modelfile_for_sbom_multi_tests.xml  modelfile_for_sbom_tests.xml  sbom_cyclonedx_generator_test.py
tests/sgraph/: modelapi_test.py  modelfile_direct_indirect.xml
tutorial-code/: sample_queries.py  samplemodel.txt  samplemodel.xml  tutorial-code.py
