[metadata]
name = sgraph
version = 0.2.0
description = sgraph hierarchic graph data structure, format and algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/softagram/sgraph
author = Ville Laitila
author_email = ville.laitila@softagram.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/softagram/sgraph/issues

[options]
include_package_data = True
packages = sgraph, sgraph.cli, sgraph.algorithms, sgraph.attributes, sgraph.converters
python_requires = >=3.8
install_requires =
    pandas>=1.2.2
    lxml>=4.9.1
    click>=7.1.2
    textX>=3.1.1
package_dir = 
   sgraph=sgraph

setup_requires=
   wheel

[options.entry_points]
console_scripts = 
    sgraph=sgraph:cli_main

[options.packages.find]
where = src

[options.package_data]
"sgraph" = ["**/*.tx"]
