[metadata]
name = sgraph
version = 0.6.1
description = sgraph hierarchic graph data structure, format and algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/softagram/sgraph
author = Ville Laitila
author_email = ville.laitila@softagram.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/softagram/sgraph/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.5.3
    lxml>=5.3.0
package_dir =
    = src

[options.packages.find]
where = src
